Settings: Add Game Space support
Add support for Game Space via existing GameSettingsFeatureProvider

Signed-off-by: aswin7469 <aswinas@pixysos.com>
Change-Id: I1a1657cebfc4bbf9f3273bcede2eac0911467bfb

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13677,4 +13677,8 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN/password is entered</string>
+
+    <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
 </resources>
